# xontrib-openai

./: README.md  pyproject.toml
.github/workflows/: test.yml
tests/: test_xontrib.py
xontrib/: openai.py
