
[tool.poetry]
name = "xontrib-openai"
version = "0.0.1"
description = "Use Open AI models in xonsh shell."
authors = ["anki-code <a@a.a>"]

license = "MIT"
readme = "README.md"

repository = "https://github.com/anki-code/xontrib-openai"
keywords = ['xontrib', 'xonsh']
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: System :: Shells",
    "Topic :: System :: System Shells",
    "Topic :: Terminals",
    "Programming Language :: Python :: 3",
]

packages = [{ include = "xontrib" }]

[tool.poetry.urls]

Homepage = "https://github.com/anki-code/xontrib-openai"
Documentation = "https://github.com/anki-code/xontrib-openai/blob/master/README.md"
Code = "https://github.com/anki-code/xontrib-openai"
"Issue tracker" = "https://github.com/anki-code/xontrib-openai/issues"


[tool.poetry.dependencies]
python = ">=3.7"
xonsh = ">=0.12.5"
openai = ">=0.27"



[tool.poetry.dev-dependencies]
pytest = ">=7.0"



[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"

[tool.black]
include = '\.pyi?$'
force-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.vscode
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | disk-cache.sqlite3
)/
'''
